<resources>
    <string name="app_name">CropIndex</string>

    <string name="title_section0">Overview</string>
    <string name="title_section1">Location Information</string>
    <string name="title_section2">Weather Data</string>
    <string name="title_section3">Crop Data</string>
    <string name="title_section4">Field Data</string>
    <string name="title_section5">Attachments</string>
    <string name="title_section6">Guidelines</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_submit">Submit</string>

    <string name="action_settings">Settings</string>

    <string name="preamble">The following data will be contributed to a database that will help estimate local agricultural potential and detect crop stress. This classification schema has been taken from the USDA\&apos;s system for monitoring agricultural conditions at a county level. Navigate the menu tabs to the left to enter data. Save a record by selecting SUBMIT. For information regarding the criteria listed within, please refer to the Guidelines tab.</string>
    <string name="title_activity_submission">Submission</string>
    <string name="hello_world">Hello world!</string>

    <string name="confirm_submission">How do you want to submit this data?</string>
    <string name="email_submission">Email</string>
    <string name="local_submission">SD card</string>

    <string name="preview">Preview: </string>

    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>

    <string name="property_id">Please identify the farm and/or owner:</string>
    <string name="record_owner">ID Farm</string>
    <string name="show_location">Refresh Location</string>
    <string name="date_field_title">Date: </string>
    <string name="change_date">Change Date</string>
    <string name="location_field_title">Location:</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>

    <string name="temperature">Temperature</string>
    <string name="temperature_field_title">Temperature:</string>
    <string name="button_editTemp">Record Temp</string>
    <string name="rainfall">Rainfall</string>
    <string name="rainfall_field_title">Rainfall:</string>
    <string name="button_editRainfall">Record Rainfall</string>
    
    <string name="excellent">Excellent (&#37;)</string>
    <string name="good">Good (&#37;)</string>
    <string name="fair">Fair (&#37;)</string>
    <string name="poor">Poor (&#37;)</string>
    <string name="vpoor">Very Poor (&#37;)</string>
    <string name="record">Enter Value</string>
    <string name="percent_sign">(&#37;)</string>

    <string name="crop1_field_title">Primary Crop:</string>
    <string name="primary_crop">Primary Crop</string>
    <string name="crop1_hint">enter primary crop</string>
    <string name="crop1_button">Record Crop</string>
    
    <string name="soilmoisture_field_title">Soil Moisture:</string>
    <string name="vvshort">Very Short (&#37;)</string>
    <string name="vshort">Short (&#37;)</string>
    <string name="adequate">Adequate (&#37;)</string>
    <string name="surplus">Surplus (&#37;)</string>

    <string name="select">Select</string>

    <string name="humus_field_title">Soil Organic Content (Humus)</string>
    <string name="none">None</string>
    <string name="low">Low</string>
    <string name="moderate">Moderate</string>
    <string name="high">High</string>
    <string name="vhigh">Very High</string>

    <string name="images">Images:</string>
    <string name="notes">Notes:</string>

    <string name="add_notes">Add/Edit Notes</string>
    <string name="launch_camera">Launch Camera</string>
    <string name="delete_image">Edit/Delete Image</string>

    <string name="display_image">Display Image</string>
    <string name="clear">Clear</string>
    <string name="image_path">Enter path to image:</string>

    <string name="reset">Reset Form</string>
    <string name="title_activity_google_play_services">GooglePlayServicesActivity</string>

    <string name="latitude_label">Latitude: </string>
    <string name="longitude_label">Longitude: </string>

    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>
    <string name="title_activity_google_play_gps">GooglePlayGPSActivity</string>
    
    





</resources>
