<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_section2"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/textView"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_field_title"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/displayTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <Button
            android:id="@+id/button_editTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_editTemp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rainfall_field_title"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/displayRainfall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <Button
            android:id="@+id/button_editRainfall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_editRainfall"
            />



    </LinearLayout>

</RelativeLayout>